--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "build:backend": "cd backend && npm run build",
     "test": "cd backend && npm test && cd ../frontend && npm test"
   },
-  "keywords": ["email", "deleter", "gmail", "automation", "react", "nodejs"],
+  "keywords": [
+    "email",
+    "deleter",
+    "gmail",
+    "automation",
+    "react",
+    "nodejs"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
