--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,20 +1,5 @@
 {
-  "buildCommand": "npm ci --force && npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm ci --force",
   "framework": "vite",
-  "functions": {
-    "app/api/**/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ]
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 }
